--- a/notebooks/genlink_tutorial.ipynb
+++ b/notebooks/genlink_tutorial.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! git clone https://github.com/alexeyshmelev/GENLINK.git"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
