--- a/notebooks/genlink_tutorial.ipynb
+++ b/notebooks/genlink_tutorial.ipynb
@@ -23,6 +23,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this code is really version sensetive (I couldn't install requirements.txt in Google Colab, so use this workaround)\n",
+    "! pip install pandas==1.5.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# for Google Colab use only!\n",
     "# if you run it locally, try pip install -r requirements.txt\n",
     "! pip install torch_geometric"
