--- a/notebooks/make_workshop_dataset.ipynb
+++ b/notebooks/make_workshop_dataset.ipynb
@@ -2,6 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original edge_index shape: torch.Size([2, 8])\n",
+      "tensor([[0, 1, 1, 2, 2, 3, 3, 0],\n",
+      "        [1, 0, 2, 1, 3, 2, 0, 3]])\n",
+      "\n",
+      "After dropout:\n",
+      "Dropped edge_index shape: torch.Size([2, 4])\n",
+      "tensor([[0, 0, 1, 3],\n",
+      "        [1, 3, 0, 0]])\n",
+      "\n",
+      "edge_id (which original undirected pairs were kept):\n",
+      "tensor([0, 7, 0, 7])\n",
+      "\n",
+      "After dropout:\n",
+      "Dropped edge_index shape: torch.Size([2, 6])\n",
+      "tensor([[0, 1, 2, 1, 2, 3],\n",
+      "        [1, 2, 3, 0, 1, 2]])\n",
+      "\n",
+      "edge_id (which original undirected pairs were kept):\n",
+      "tensor([0, 2, 4, 0, 2, 4])\n",
+      "\n",
+      "After dropout:\n",
+      "Dropped edge_index shape: torch.Size([2, 6])\n",
+      "tensor([[0, 1, 0, 1, 2, 3],\n",
+      "        [1, 2, 3, 0, 1, 0]])\n",
+      "\n",
+      "edge_id (which original undirected pairs were kept):\n",
+      "tensor([0, 2, 7, 0, 2, 7])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from torch_geometric.utils import dropout_edge\n",
+    "\n",
+    "# make a simple undirected edge_index with both directions\n",
+    "edge_index = torch.tensor([\n",
+    "    [0, 1, 1, 2, 2, 3, 3, 0],  # sources\n",
+    "    [1, 0, 2, 1, 3, 2, 0, 3]   # targets\n",
+    "], dtype=torch.long)\n",
+    "\n",
+    "print(\"Original edge_index shape:\", edge_index.shape)\n",
+    "print(edge_index)\n",
+    "\n",
+    "# drop 50% of undirected edges (both directions together)\n",
+    "# torch.manual_seed(42)  # for reproducibility\n",
+    "\n",
+    "for i in range(3):\n",
+    "    edge_index_dropped, edge_id = dropout_edge(\n",
+    "        edge_index, p=0.5, force_undirected=True, training=True\n",
+    "    )\n",
+    "\n",
+    "    print(\"\\nAfter dropout:\")\n",
+    "    print(\"Dropped edge_index shape:\", edge_index_dropped.shape)\n",
+    "    print(edge_index_dropped)\n",
+    "\n",
+    "    print(\"\\nedge_id (which original undirected pairs were kept):\")\n",
+    "    print(edge_id)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 1, 1, 2, 2, 3, 3, 0],\n",
+       "        [1, 0, 2, 1, 3, 2, 0, 3]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edge_index"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
