--- a/notebooks/copy_metrics.ipynb
+++ b/notebooks/copy_metrics.ipynb
@@ -1,6 +1,136 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "Dataset: CR_class_balance_interpolation_step_0.csv\n",
+      "Total unique nodes: 4631\n",
+      "Class distribution (per node):\n",
+      "  P0: nodes =   1626, proportion = 0.3511\n",
+      "  P1: nodes =   1002, proportion = 0.2164\n",
+      "  P2: nodes =   1313, proportion = 0.2835\n",
+      "  P3: nodes =    690, proportion = 0.1490\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset: CR_class_balance_interpolation_step_1.csv\n",
+      "Total unique nodes: 4631\n",
+      "Class distribution (per node):\n",
+      "  P0: nodes =   1505, proportion = 0.3250\n",
+      "  P1: nodes =   1042, proportion = 0.2250\n",
+      "  P2: nodes =   1273, proportion = 0.2749\n",
+      "  P3: nodes =    811, proportion = 0.1751\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset: CR_class_balance_interpolation_step_2.csv\n",
+      "Total unique nodes: 4631\n",
+      "Class distribution (per node):\n",
+      "  P0: nodes =   1400, proportion = 0.3023\n",
+      "  P1: nodes =   1077, proportion = 0.2326\n",
+      "  P2: nodes =   1238, proportion = 0.2673\n",
+      "  P3: nodes =    916, proportion = 0.1978\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset: CR_class_balance_interpolation_step_3.csv\n",
+      "Total unique nodes: 4631\n",
+      "Class distribution (per node):\n",
+      "  P0: nodes =   1309, proportion = 0.2827\n",
+      "  P1: nodes =   1107, proportion = 0.2390\n",
+      "  P2: nodes =   1208, proportion = 0.2609\n",
+      "  P3: nodes =   1007, proportion = 0.2174\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset: CR_class_balance_interpolation_step_4.csv\n",
+      "Total unique nodes: 4631\n",
+      "Class distribution (per node):\n",
+      "  P0: nodes =   1229, proportion = 0.2654\n",
+      "  P1: nodes =   1134, proportion = 0.2449\n",
+      "  P2: nodes =   1181, proportion = 0.2550\n",
+      "  P3: nodes =   1087, proportion = 0.2347\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset: CR_class_balance_interpolation_step_5.csv\n",
+      "Total unique nodes: 4632\n",
+      "Class distribution (per node):\n",
+      "  P0: nodes =   1158, proportion = 0.2500\n",
+      "  P1: nodes =   1158, proportion = 0.2500\n",
+      "  P2: nodes =   1158, proportion = 0.2500\n",
+      "  P3: nodes =   1158, proportion = 0.2500\n",
+      "\n",
+      "Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from os import listdir\n",
+    "from os.path import isfile, join\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Folder with your CSV files\n",
+    "data_dir = \"/disk/10tb/home/shmelev/genlink_real_data_simulation_class_balance_interpolation\"\n",
+    "\n",
+    "# Collect only CR*.csv files\n",
+    "csv_files = sorted(\n",
+    "    f for f in listdir(data_dir)\n",
+    "    if f.startswith(\"CR\") and f.endswith(\".csv\") and isfile(join(data_dir, f))\n",
+    ")\n",
+    "\n",
+    "if not csv_files:\n",
+    "    print(f\"No CR*.csv files found in: {data_dir}\")\n",
+    "\n",
+    "for fname in csv_files:\n",
+    "    full_path = join(data_dir, fname)\n",
+    "    df = pd.read_csv(full_path)\n",
+    "\n",
+    "    required_cols = {\"node_id1\", \"node_id2\", \"label_id1\", \"label_id2\"}\n",
+    "    if not required_cols.issubset(df.columns):\n",
+    "        print(f\"\\nSkipping {fname}: required columns {required_cols} not found.\")\n",
+    "        continue\n",
+    "\n",
+    "    # Build (node, label) pairs from both ends\n",
+    "    n1 = df[[\"node_id1\", \"label_id1\"]].rename(\n",
+    "        columns={\"node_id1\": \"node_id\", \"label_id1\": \"label_id\"}\n",
+    "    )\n",
+    "    n2 = df[[\"node_id2\", \"label_id2\"]].rename(\n",
+    "        columns={\"node_id2\": \"node_id\", \"label_id2\": \"label_id\"}\n",
+    "    )\n",
+    "    nodes = pd.concat([n1, n2], ignore_index=True)\n",
+    "\n",
+    "    # Check that each node has a single label\n",
+    "    label_counts_per_node = nodes.groupby(\"node_id\")[\"label_id\"].nunique()\n",
+    "    conflict_nodes = label_counts_per_node[label_counts_per_node > 1].index.tolist()\n",
+    "    if conflict_nodes:\n",
+    "        print(f\"\\nWARNING: file {fname} has nodes with multiple labels (showing first 10):\")\n",
+    "        print(conflict_nodes[:10])\n",
+    "        # You can choose to continue or raise an error here.\n",
+    "        # raise ValueError(f\"Multiple labels for nodes in {fname}\")\n",
+    "\n",
+    "    # Take one (node, label) per node (safe because we checked uniqueness)\n",
+    "    unique_nodes = nodes.drop_duplicates(subset=[\"node_id\"])\n",
+    "\n",
+    "    # Count how many nodes of each class we have\n",
+    "    class_counts = unique_nodes[\"label_id\"].value_counts().sort_index()\n",
+    "    total_nodes = int(class_counts.sum())\n",
+    "\n",
+    "    print(\"\\n\" + \"=\" * 70)\n",
+    "    print(f\"Dataset: {fname}\")\n",
+    "    print(f\"Total unique nodes: {total_nodes}\")\n",
+    "    print(\"Class distribution (per node):\")\n",
+    "    for label, count in class_counts.items():\n",
+    "        prop = count / total_nodes\n",
+    "        print(f\"  {label}: nodes = {count:6d}, proportion = {prop:.4f}\")\n",
+    "\n",
+    "print(\"\\nDone.\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
